Changed the app name in package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ux-workshop-toolkit",
+  "name": "imgback.io",
   "version": "0.0.0",
-  "description": "Small description for ux-workshop-toolkit goes here",
+  "description": "",
   "private": true,
   "directories": {
     "doc": "doc",
